--- a/spotifyjs.html
+++ b/spotifyjs.html
@@ -8,7 +8,7 @@
 
   <script>
     var client_id = 'daeea42af07e4702905904f246591317';
-    var redirect_uri = 'https://swoodberry13.github.io/Bones_and_Company/';
+    var redirect_uri = 'https://swoodberry13.github.io/more_spotify_testing/results.html';
     var scopes = 'user-top-read';
             document.getElementById('loginButton').addEventListener('click', function() {
             var authUrl = 'https://accounts.spotify.com/authorize?client_id=' + client_id +
