--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="refresh" content="0; URL=results.html"  />
+	<meta http-equiv="refresh" content="0; URL=spotifyjs.html"  />
 	<title></title>
 </head>
 <body>
